kubernetes/main/apps/vpn/dispatcharr/app/policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dispatcharr-vpn
  namespace: vpn
  labels:
    app.kubernetes.io/instance: dispatcharr
    app.kubernetes.io/name: dispatcharr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: dispatcharr
      app.kubernetes.io/name: dispatcharr
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
